feat: add registration and email verification pages, implement workspace dashboard
- Created RegisterPage for user registration with role selection and OTP verification.
- Implemented VerifyEmailPage for email OTP verification after registration.
- Developed WorkspaceDashboardPage to display user-specific data based on role (customer or freelancer).
- Added GuestRoute and ProtectedRoute for route protection based on authentication status.
- Introduced utility functions for formatting currency, dates, and project/bid statuses.